# finn

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  Recommended FastAPI Project Structure.txt  TASKS.md  copilot-instructions.md  main.py  mise.toml  pyproject.toml  run.sh
.githooks/: pre-commit  pre-push
app/: csv_mapper.py  db.py  dependencies.py  main.py  portfolio.py  profile.py  queries.py  seed.py  writer.py
app/helpers/: csv_mapper_constants.py  csv_mapper_io.py  csv_mapper_model.py  csv_mapper_parsing.py  csv_mapper_scoring.py  csv_mapper_types.py
app/routers/: pages.py
app/routers/api/: __init__.py  accounts.py  analytics.py  budget.py  investments.py  journal.py  overrides.py  portfolios.py  profile.py  real_estate.py  system.py  transactions.py
app/schemas/: __init__.py  accounts.py  budget.py  investments.py  journal.py  portfolios.py  profile.py  real_estate.py  system.py  transactions.py
app/services/: __init__.py  accounts.py  analytics.py  budget.py  investments.py  journal.py  portfolios.py  profile.py  reads.py  real_estate.py  system.py  transactions.py  writes.py
docs/: architecture.md  csv-import.md  development.md  frontend.md  pages.md  schema.md  services-migration.md
scripts/: backup.py  check_new_code_coverage.py  gen_favicon.py  setup_profile.py
static/: style.css
templates/: account_detail.html  accounts.html  base.html  budget.html  dashboard.html  data.html  investments.html  journal.html  landing.html  real_estate.html  rebalance.html  tax.html
tests/: conftest.py  coverage_dashboard.py  coverage_dashboard_template.html  test_api_smoke.py  test_csv_mapper_detection.py  test_db_lifecycle.py  test_direct_modules.py  test_portfolio_module.py  test_profile_seed_modules.py  test_queries_dashboard.py  test_router_budget_investments_system.py  test_router_pages_and_portfolios.py  test_scheduler.py  test_services_budget_transactions.py  test_services_investments_real_estate.py  test_services_portfolios.py  test_smoke.py  test_tax.py  test_transaction_csv_mapping.py  test_writer_functions.py  test_writer_prices.py  test_writer_transaction_import.py  test_writer_transactions.py
