[project]
name = "finn"
version = "0.1.0"
description = "Local-first personal finance dashboard — net worth, investments, accounts, real estate, tax, and budget in a single SQLite database"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
keywords = ["finance", "personal-finance", "net-worth", "budget", "investing"]
dependencies = [
    "apscheduler>=3.10,<4",
    "fastapi>=0.136.0",
    "jinja2>=3.1.6",
    "uvicorn>=0.45.0",
    "yfinance>=1.3.0",
]

[dependency-groups]
dev = [
    "pillow>=12.2.0",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.ty.environment]
python = ".venv"
python-version = "3.12"
